# councilscraper

./: .env.example  .gitignore  BUILD_SUMMARY.md  Council_DA_GitHub_Repository_Analysis.md  Council_Planning_Data_API_Project_Plan (1).md  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  render.yaml
.claude/: settings.local.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy_scraper.sh  init-db.sql  run_scrapers.py  run_with_monitoring.py  setup_cron.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  admin.py  applications.py  councils.py  health.py  search.py  webhooks.py
src/config/: councils.py  settings.py
src/mappers/: __init__.py  category_classifier.py  data_normalizer.py  field_mapper.py
src/models/: __init__.py  api_key.py  application.py  base.py  council.py  field_mapping.py  scrape_log.py
src/monitoring/: __init__.py  alerts.py  status.py
src/orchestrator/: __init__.py  celery_app.py  scheduler.py  tasks.py
src/schemas/: __init__.py  enums.py  master.py
src/scrapers/: __init__.py
src/scrapers/base/: __init__.py  adapter.py  browser.py  registry.py
src/scrapers/nsw/: __init__.py  eplanning.py  sydney.py
src/scrapers/nt/: __init__.py  nt_planning.py
src/scrapers/qld/: __init__.py  brisbane.py  development_i.py
src/scrapers/sa/: __init__.py  plan_sa.py
src/scrapers/tas/: __init__.py  epathway.py
src/scrapers/vic/: __init__.py  melbourne.py  spear.py
src/scrapers/wa/: __init__.py  plan_wa.py
src/services/: __init__.py
src/services/enrichment/: __init__.py  enricher.py  property_lookup.py
src/services/geocoding/: __init__.py  batch_geocoder.py  (+2 more)
src/storage/: __init__.py  database.py  raw_store.py
